insercao da logo do guardioes

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,9 @@
 <ion-menu [content]="content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Guardiões do Bem</ion-title>
+      <ion-title>
+        <img src="assets/imgs/logo/guardioes-do-bem.svg" alt="Guardiões do Bem" class="imagem imagem-192">
+      </ion-title>
     </ion-toolbar>
   </ion-header>
 
