--- a/src/assets/sass/componentes/_card.sass
+++ b/src/assets/sass/componentes/_card.sass
@@ -6,7 +6,7 @@
     .card-header
         margin: 0
         padding: 0
-        background-color: $cor-primaria
+        background-color: $cor-preta
         position: relative
 
         img
