--- a/src/assets/sass/elementos/_titulos.sass
+++ b/src/assets/sass/elementos/_titulos.sass
@@ -1,5 +1,44 @@
 .titulo
     font-weight: bold
+    padding: .5em 0
+
+    &.titulo-1
+        font-size: 2.5rem
+
+    &.titulo-2
+        font-size: 2rem
+
+    &.titulo-3
+        font-size: 1.5rem
+
+    &.titulo-4
+        font-size: 1.25rem
+
+    &.titulo-5
+        font-size: 1rem
 
     &.titulo-6
         font-size: .85rem
+
+.subtitulo
+    font-weight: bold
+    text-transform: uppercase
+    padding: 1em 0
+
+    &.subtitulo-1
+        font-size: 2rem
+
+    &.subtitulo-2
+        font-size: 1.5rem
+
+    &.subtitulo-3
+        font-size: 1.25rem
+
+    &.subtitulo-4
+        font-size: 1rem
+
+    &.subtitulo-5
+        font-size: 85rem
+
+    &.subtitulo-6
+        font-size: .75rem
