--- a/src/assets/sass/variaveis/_variaveis.sass
+++ b/src/assets/sass/variaveis/_variaveis.sass
@@ -7,16 +7,16 @@ $cor-branca: white
 $cor-roxa: purple
 $cor-magenta: magenta
 $cor-ciano: cyan
-$cor-cinza-5: darken($cor-preta, 95%)
-$cor-cinza-10: darken($cor-preta, 90%)
-$cor-cinza-20: darken($cor-preta, 80%)
-$cor-cinza-30: darken($cor-preta, 70%)
-$cor-cinza-40: darken($cor-preta, 60%)
-$cor-cinza-50: darken($cor-preta, 50%)
-$cor-cinza-60: darken($cor-preta, 40%)
-$cor-cinza-70: darken($cor-preta, 30%)
-$cor-cinza-80: darken($cor-preta, 20%)
-$cor-cinza-90: darken($cor-preta, 10%)
+$cor-cinza-5: lighten($cor-preta, 95%)
+$cor-cinza-10: lighten($cor-preta, 90%)
+$cor-cinza-20: lighten($cor-preta, 80%)
+$cor-cinza-30: lighten($cor-preta, 70%)
+$cor-cinza-40: lighten($cor-preta, 60%)
+$cor-cinza-50: lighten($cor-preta, 50%)
+$cor-cinza-60: lighten($cor-preta, 40%)
+$cor-cinza-70: lighten($cor-preta, 30%)
+$cor-cinza-80: lighten($cor-preta, 20%)
+$cor-cinza-90: lighten($cor-preta, 10%)
 
 $cor-info: $cor-azul
 $cor-atencao: $cor-laranja
