--- a/src/assets/sass/componentes/_list.sass
+++ b/src/assets/sass/componentes/_list.sass
@@ -2,10 +2,18 @@
     .item
         margin: 0
         padding: 0
+        border-bottom: 1px solid $cor-cinza-20
+        padding: 1rem 0
 
         .label
             margin: 0
         
         .item-inner
             padding-right: 0 !important
-            
+            border: 0 solid transparent
+
+.list-card
+
+.list-card-item
+    white-space: pre-wrap
+    padding-top: .5rem
