--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,6 +8,7 @@
   </ion-header>
 
   <ion-content>
+    {{ nomeDoUsuario }}
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
