ajuste do layout da listagem das paradas

--- a/src/assets/sass/base/_utilitarios.sass
+++ b/src/assets/sass/base/_utilitarios.sass
@@ -22,3 +22,37 @@
 
 .u-alinhado-justificado
     text-align: justify !important
+
+.u-remover-margem
+    margin: 0 !important
+
+.u-remover-padding
+    padding: 0 !important
+
+
+.u-texto-branco
+    color: $cor-branca !important
+
+.u-texto-laranja
+    color: $cor-laranja !important
+
+.u-texto-preto
+    color: $cor-preta !important
+
+.u-texto-primaria
+    color: $cor-primaria !important
+
+.u-texto-secundaria
+    color: $cor-secundaria !important
+
+.u-texto-erro
+    color: $cor-erro !important
+
+.u-inline
+    display: inline !important
+    
+.u-block
+    display: block !important
+
+.u-margem
+    margin: 1rem !important
