--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
   </ion-header>
 
   <ion-content>
-    {{ nomeDoUsuario }}
+    <div>{{ nomeDoUsuario }}</div>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
