retirada do cazalbé para apresentacao

--- a/src/assets/sass/componentes/_card.sass
+++ b/src/assets/sass/componentes/_card.sass
@@ -8,6 +8,7 @@
         padding: 0
         background-color: $cor-preta
         position: relative
+        min-height: 190px
 
         img
             opacity: .3
